--- a/UI/mul.lproj/FileInfoWindow.xcstrings
+++ b/UI/mul.lproj/FileInfoWindow.xcstrings
@@ -10,6 +10,12 @@
             "state" : "new",
             "value" : "signing status"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "estado de la firma"
+          }
         }
       }
     },
@@ -20,6 +26,12 @@
         "en" : {
           "stringUnit" : {
             "state" : "new",
+            "value" : "plist"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
             "value" : "plist"
           }
         }
@@ -34,6 +46,12 @@
             "state" : "new",
             "value" : "Sign:"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Firmar:"
+          }
         }
       }
     },
@@ -46,6 +64,12 @@
             "state" : "new",
             "value" : "File Information"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Información de Archivo"
+          }
         }
       }
     },
@@ -56,6 +80,12 @@
         "en" : {
           "stringUnit" : {
             "state" : "new",
+            "value" : "Hash:"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
             "value" : "Hash:"
           }
         }
@@ -70,6 +100,12 @@
             "state" : "new",
             "value" : "item creation/modified"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "creación/modificación de ítem"
+          }
         }
       }
     },
@@ -81,6 +117,12 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "Size:"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tamaño:"
           }
         }
       }
@@ -94,6 +136,12 @@
             "state" : "new",
             "value" : "Item Path"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ruta de Ítem"
+          }
         }
       }
     },
@@ -105,6 +153,12 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "List:"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lista:"
           }
         }
       }
@@ -118,6 +172,12 @@
             "state" : "new",
             "value" : "Item Name"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Nombre de Ítem"
+          }
         }
       }
     },
@@ -129,6 +189,12 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "Close"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cerrar"
           }
         }
       }
@@ -142,6 +208,12 @@
             "state" : "new",
             "value" : "Time:"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tiempo:"
+          }
         }
       }
     },
@@ -154,6 +226,12 @@
             "state" : "new",
             "value" : "item size"
           }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "tamaño de ítem"
+          }
         }
       }
     },
@@ -165,6 +243,12 @@
           "stringUnit" : {
             "state" : "new",
             "value" : "item hash"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "hash de ítem"
           }
         }
       }
